<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <Button
        android:id="@+id/bbbtn"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:background="@drawable/back"
        android:textSize="40sp"
        />
    <TextView
        android:id="@+id/ttv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/username"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#6077f0"/>

    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="#FFAD33"
        android:hint="@string/please_input_newusername"
        android:background="@drawable/style2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:layout_below="@id/ttv"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="no"
        android:inputType="text" />
    <TextView
        android:id="@+id/ttv_1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/et_1"/>

    <Button
        android:id="@+id/bbtn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@id/ttv_1"
        android:layout_marginTop="1dp"
        android:onClick="sendMessage"
        android:text="@string/ok"
        android:layout_marginLeft="175dp"
        android:layout_marginStart="175dp" />


</RelativeLayout>